# tiny-rlm

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  rlm_config.yaml
docs/: golden_dataset_with_content.csv
examples/: evaluate.py  extract_mna.py
schema/: README.md  mna.yaml
tests/: conftest.py  test_config.py  test_engine.py  test_models.py  test_prompts.py  test_repl.py  test_schema.py
tiny_rlm/: __init__.py  config.py  engine.py  llm.py  prompts.py  repl.py
tiny_rlm/mna/: __init__.py  extractor.py  models.py  prompts.py  schema.py
